# SmartDNN

./: .dockerignore  .gitignore  CMakeLists.txt  EIGEN_BACKEND_README.md  LICENSE  README.md  test_layers.cpp
.docker/: Dockerfile
Examples/: MNistModel.cpp  SimpleLinearRegressionModel.cpp
cmake/: SIMDDetection.cmake
examples/: MNistModel.cpp  SimpleLinearRegressionModel.cpp
smart_dnn/: Activation.hpp  DTypes.hpp  Layer.hpp  Loss.hpp  Optimizer.hpp  RandomEngine.hpp  Shape.hpp  SmartDNN.hpp  Tensor.hpp  TensorMath.hpp  TensorOperations.hpp  activations  loss  optimizers  regularisation
smart_dnn/Activations/: LeakyReLU.hpp  Mish.hpp  ReLU.hpp  Sigmoid.hpp  Softmax.hpp  Swish.hpp  Tanh.hpp
smart_dnn/Datasets/: MNistLoader.hpp  SampleGenerator.hpp
smart_dnn/Debugging/: Logger.hpp
smart_dnn/Layers/: ActivationLayer.hpp  Conv2DLayer.hpp  FlattenLayer.hpp  FullyConnectedLayer.hpp
smart_dnn/Loss/: CategoricalCrossEntropyLoss.hpp  MSELoss.hpp
smart_dnn/Optimizers/: AdamOptimizer.hpp  RMSPropOptimizer.hpp  SGDOptimizer.hpp
smart_dnn/Regularisation/: BatchNormLayer.hpp  BatchNormalizationLayer.hpp  DropoutLayer.hpp  MaxPooling2DLayer.hpp
smart_dnn/SIMD/: SIMDOperations.hpp  SIMDSelection.hpp  SIMDTypes.hpp
smart_dnn/Shape/: Shape.hpp  ShapeOperations.hpp
smart_dnn/SmartDNN/: SmartDNN.cpp  SmartDNN.impl.hpp
smart_dnn/Tensor/: AdvancedTensorOperations.hpp  BroadcastView.hpp  DeviceTypes.hpp  SliceView.hpp  Tensor.cpp  Tensor.hpp  Tensor.impl.hpp  TensorArithmetic.hpp  TensorConfig.hpp  TensorData.hpp  TensorData.impl.hpp  TensorDataCPU.impl.hpp  TensorDataGPU.impl.hpp  TensorFactory.hpp  TensorOperations.hpp  TensorWrapper.hpp
smart_dnn/model/: SmartDNN.impl.hpp
smart_dnn/tensor/: DefaultTensorType.hpp  TensorAdapterBase.cpp  TensorAdapterBase.hpp  TensorBackend.hpp  TensorBackendUtil.cpp  TensorBackendUtil.hpp  TensorBase.cpp  TensorBase.hpp  TensorBase.tpp  TensorCreationUtil.hpp  TensorIndex.hpp  TensorView.hpp
smart_dnn/tensor/Backend/ArrayFire/: GPUTensor.cpp  GPUTensor.hpp  GPUTensor.tpp  GPUTensorBackend.cpp  GPUTensorBackend.hpp  Utils.cpp  Utils.hpp
smart_dnn/tensor/Backend/Default/: AdvancedTensorOperations.hpp  BroadcastView.hpp  CPUTensor.cpp  CPUTensor.hpp  CPUTensor.impl.hpp  CPUTensor.tpp  CPUTensorBackend.cpp  CPUTensorBackend.hpp  CPUTensorBackend.tpp  SliceView.hpp  TemplatedOperations.hpp  Tensor.impl.hpp  TensorData.hpp  TensorDataCPU.impl.hpp  TensorFactory.hpp  TensorFactoryCPU.impl.hpp  TensorIndex.hpp  TensorOperations.hpp  TensorView.hpp  Utils.hpp
smart_dnn/tensor/Backend/Eigen/: EigenTensorBackend.cpp  EigenTensorBackend.hpp
smart_dnn/utils/: ArrayFireUtils.hpp
tests/: CMakeLists.txt  main.cpp
tests/activation/: test_activations.cpp
tests/activations/: test_activations.cpp  test_relu.cpp
tests/layers/: test_batch_norm.cpp  test_conv2d.cpp  test_conv_2d.cpp  test_dropout.cpp  test_flatten_layer.cpp  test_fully_connected.cpp  test_max_pooling.cpp
tests/loss/: test_loss.cpp
tests/optimizers/: test_optimizers.cpp  test_rmsprop_optimizer.cpp  test_sgd_optimizer.cpp
tests/tensor/: tensor_helpers.hpp  test_additional_backend.cpp  test_additional_tensor.cpp  test_advanced_tensor_operations.cpp  test_eigen_backend.cpp  test_fully_connected_layer.cpp  test_layers.cpp  test_templated_functions.cpp  test_tensor.cpp  test_tensor_backend.cpp  test_tensor_operations.cpp
tests/utils/: tensor_helpers.hpp
